# hexchat-fishlim-reloaded

./: .gitignore  README.md  irc.c  keystore.c  meson.build  meson_options.txt  plugin_hexchat.c
subprojects/: .gitignore
tests/: meson.build
tests/old_version/: fish.c
